--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,5 @@
 arb-dir: lib/l10n
+synthetic-package: false
 template-arb-file: intl_en.arb
 output-localization-file: app_localizations.dart
 output-class: AppLocalizations
